Change log for zeit.web
=======================

2.57 (unreleased)
-----------------

- ZON-2481: Add ZEIT Campus header + main navigation

- MAINT: Edgesideinclude login-state for campus and magazin

- ZON-2637: Enable ad-label on framebuilder

- ZON-2772: Ad tags for AMP article

- ZON-2481: Implement topiclinks for all campus content types

- BUG-282: Join query strings for feed URLs with tracking params

- MAINT: Disuse rsynced node-comment-statistics in favor of API endpoint

- MAINT: Migrate feature toggles from view attributes to jinja global

- FIX: Don't accidentally create missing image variants in ZMO

- ZON-2780: Add ivw tracking for AMPs


2.56.3 (2016-02-19)
-------------------

- HOTFIX: Avoid collapsing of margins in author list


2.56.2 (2016-02-18)
-------------------

- PERF: Enable solr proxy for author list


2.56.1 (2016-02-17)
-------------------

- HOTFIX: Pagination for author index


2.56 (2016-02-17)
-----------------

- ZON-2507: Implement zeit campus groundwork (behind a feature toggle)

- ZON-2806: Add product.title as author fallback to AMPages

- ZON-2581: Track ad start events to webtrekk

- ZON-2805: Load distinct brightcove player in AMPages

- ZON-2807: Validate AMP microdata

- ZON-2838: Author index with teasers and alphabetical navigation

- FIX: Don't try to re-raise interrupts, just let them slip by

- FIX: Write adcontroller level4 if applicable

- MAINT: Make solr timeout configurable

- MAINT: Make CP modules to preserve on pagination configurable

- MAINT: Migrate column teaser to new image delivery stack

- MAINT: Update schema.org microdata


2.55 (2016-02-09)
-----------------

- MAINT: Refactor printkiosk

- MAINT: Add enhanced window.Zeit javascript module to ZMO

- HOTFIX: Correctly parse jinja profiler toggle value

- ZON-2783: Add open graph sharing image width and height metadata

- ZON-2601: Add sharing links and article tags to AMPages

- ZON-2602: Add Nextread and Verlags-Nextread to AMPages
